--- a/Netflix-clone/style.css
+++ b/Netflix-clone/style.css
@@ -11,7 +11,7 @@ body{
     background-color: gray;
 }
 .main{
-    background-image: url(assets/first_image.jpg);
+    background-image: url(first_image.jpg);
     background-position: center center;
     background-size: max(1200px, 100vw);
     background-repeat: no-repeat;
